--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,162 @@
+:root {
+  --main-background: hsl(222, 26%, 31%);
+  --toggle-background: hsl(223, 31%, 20%);
+  --screen-background: hsl(224, 36%, 15%);
+  --key-del-reset-bg: hsl(225, 21%, 49%);
+  --key-del-reset-shadow: hsl(224, 28%, 35%);
+  --key-enter-bg: hsl(6, 63%, 50%);
+  --key-enter-shadow: hsl(6, 70%, 34%);
+  --key-main-bg: hsl(30, 25%, 89%);
+  --key-main-shadow: hsl(28, 16%, 65%);
+  --txt-keys-main:hsl(221, 14%, 31%);
+  --txt-dark:hsl(221, 14%, 31%);
+  --txt-light:hsl(0, 0%, 100%);
+  --txt-del-reset:hsl(0, 0%, 100%);
+  --txt-equal:hsl(0, 0%, 100%);
+  --txt-screen:hsl(0, 0%, 100%);
+  --font-lg: 32px;
+  --font-sm: 15px; }
+
 *, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'Spartan', sans-serif; }
+
+body {
+  background-color: var(--main-background); }
+
+.container {
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.calculator {
+  max-width: 500px;
+  width: 100%;
+  max-height: 1000px;
+  height: 100vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch; }
+
+.header {
+  display: flex;
+  font-size: var(--font-sm);
+  color: var(--txt-screen); }
+
+.header h2 {
+  font-size: var(--font-lg); }
+
+.theme-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  width: 100%; }
+
+.upper {
+  display: flex;
+  justify-content: space-around;
+  width: calc(10px * 3 + 3px * 6);
+  font-size: 10px;
+  padding-bottom: 5px; }
+
+.lower {
+  display: flex; }
+  .lower span {
+    padding-right: 1.2rem; }
+
+.toggle {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--toggle-background);
+  height: fit-content;
+  border-radius: 20px;
+  width: calc(10px * 3 + 3px * 6); }
+  .toggle-gfx {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: var(--key-enter-bg);
+    margin: 3px;
+    opacity: 0;
+    transition: transform .6s ease; }
+    .toggle-gfx.active {
+      opacity: 1;
+      transform: translateX(0px) !important; }
+    .toggle-gfx:nth-of-type(1) {
+      transform: translateX(10px); }
+    .toggle-gfx:nth-of-type(2) {
+      transform: translateX(-10px); }
+    .toggle-gfx:nth-of-type(3) {
+      transform: translateX(-10px); }
+
+.screen {
+  background-color: var(--screen-background);
+  padding: 1.5rem;
+  text-align: right;
+  color: var(--txt-screen);
+  font-size: var(--font-lg);
+  border-radius: 10px; }
+
+.keys {
+  background-color: var(--toggle-background);
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  gap: .5rem;
+  padding: 1.5rem;
+  border-radius: 10px; }
+
+.key {
+  padding-top: 10px;
+  border: none;
+  border-radius: 2px;
+  color: var(--txt-keys-main);
+  background-color: var(--key-main-bg);
+  border-bottom: 3px solid var(--key-main-shadow);
+  width: 100%;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  font-size: var(--font-lg); }
+  .key.left {
+    grid-column-start: 1;
+    grid-column-end: 3; }
+  .key.right {
+    grid-column-start: 3;
+    grid-column-end: 5; }
+  .key.alt-clr {
+    color: var(--txt-del-reset);
+    background-color: var(--key-del-reset-bg);
+    border-bottom: 3px solid var(--key-del-reset-shadow);
+    font-size: var(--font-sm); }
+  .key.equal {
+    color: var(--txt-equal);
+    background-color: var(--key-enter-bg);
+    border-bottom: 3px solid var(--key-enter-shadow); }
+
+@media screen and (min-width: 1000px) {
+  .calculator {
+    justify-content: center; }
+    .calculator > * {
+      margin: 1rem 0; }
+
+  .keys {
+    gap: 1rem; } }
+.attribution {
+  display: none;
+  font-size: 11px;
+  text-align: center; }
+
+.attribution a {
+  color: #3e52a3; }
 
 /*# sourceMappingURL=styles.css.map */
