--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,12 @@ body {
     .toggle-gfx:nth-of-type(3) {
       transform: translateX(-10px); }
 
+button:hover,
+.toggle:hover{
+  cursor: pointer;
+}
+
+
 .screen {
   background-color: var(--screen-background);
   padding: 1.5rem;
